bug: ui increased z-index of notification error

--- a/frontend/src/css/mixins/_notification.css
+++ b/frontend/src/css/mixins/_notification.css
@@ -3,6 +3,7 @@
   top: 0;
   right: 0;
   width: auto;
+  z-index:999;
 
 }
 
